--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-    "@mui/icons-material": "^5.10.14",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
     "@mui/x-data-grid": "^5.13.0",
     "@rollup/plugin-inject": "^5.0.2",
     "aws-amplify": "^5.0.2",
